# ShameBot

./: Cargo.toml  LICENSE  README.md  users.json
src/: db_test.rs  main.rs  user.rs
