[[bin]]
name = "shame-bot"
path = "src/main.rs"

[package]
name = "ShameBot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
rusqlite = { version = "0.37.0" }
serde = "1.0.219"
serde_json = "1.0.142"
